--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^11.1.2",
     "cypress": "^8.3.1",
-    "gsap": "^3.7.1",
+    "gsap": "npm:@gsap/business@^3.7.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
