--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/mdx": "^11.1.2",
     "gsap": "npm:@gsap/business@^3.7.1",
     "next": "^11.1.2",
+    "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "theme-ui": "^0.11.2"
